syntax = "proto3";

package shpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/shpb";

message AnimeLinkRequest {
    optional string officialWebsite = 1;
    optional string wikipediaUrl = 2;
    optional string crunchyrollUrl = 3;
    repeated string socialMedia = 4;
}

message AnimeLinkResponse {
    int64 ID = 1;
    string officialWebsite = 2;
    string wikipediaUrl = 3;
    string crunchyrollUrl = 4;
    repeated string socialMedia = 5;
    google.protobuf.Timestamp createdAt = 6;
}