syntax = "proto3";

package shpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/shpb";

message AnimeTrailerRequest {
    string isOfficial = 1;
    string hostName = 2;
    string hostKey = 3;
}

message AnimeTrailerResponse {
    int64 ID = 1;
    string isOfficial = 2;
    string hostName = 3;
    string hostKey = 4;
    google.protobuf.Timestamp createdAt = 5;
}